k8s-resource-manifests/xopera-rest-api/statefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xopera-rest-api
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: xopera-rest-api
  serviceName: xopera-rest-api
  replicas: 1
  template:
    metadata:
      labels:
        app: xopera-rest-api
    spec:
      containers:
      - name: xopera-rest-api
        image: sodaliteh2020/xopera-rest-api
        resources:
          limits:
            cpu: "2"
            memory: "2G"
          requests:
            cpu: "1"
            memory: "1G"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: xopera-rest-api
          - mountPath: "/root/.ssh"
            name: ssh-target
      volumes:
      - name: ssh-keys
        secret:
          secretName: xopera-rest-api-ssh-keys
          defaultMode: 0400
      - name: ssh-target
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: xopera-rest-api
      namespace: sodalite-services
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 1Gi
