k8s-resource-manifests/xopera-rest-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xopera-rest-api
  namespace: sodalite-services
spec:
  selector:
    app: xopera-rest-api
  ports:
  - port: 8080
    protocol: TCP
    name: http
