k8s-resource-manifests/xopera-rest-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xopera-rest-api-ingress
  namespace: sodalite-services
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xopera-rest-api
            port:
              number: 8080
